--- a/chip-tester.ioc
+++ b/chip-tester.ioc
@@ -9,8 +9,9 @@ CORTEX_M7.IPParameters=CPU_ICache,CPU_DCache,MPU_Control,default_mode_Activation
 CORTEX_M7.MPU_Control=__NULL
 CORTEX_M7.default_mode_Activation=1
 File.Version=6
-I2C1.IPParameters=Timing
-I2C1.Timing=0x307075B1
+I2C1.I2C_Speed_Mode=I2C_Fast_Plus
+I2C1.IPParameters=Timing,I2C_Speed_Mode
+I2C1.Timing=0x00300D31
 KeepUserPlacement=false
 MMTAppRegionsCount=0
 MMTConfigApplied=false
@@ -24,24 +25,28 @@ Mcu.IP3=NUCLEO-H753ZI
 Mcu.IP4=NVIC
 Mcu.IP5=QUADSPI
 Mcu.IP6=RCC
-Mcu.IP7=SYS
-Mcu.IPNb=9
+Mcu.IP7=SPI1
+Mcu.IP8=SYS
+Mcu.IPNb=10
 Mcu.Name=STM32H753ZITx
 Mcu.Package=LQFP144
 Mcu.Pin0=PE2
 Mcu.Pin1=PC13
-Mcu.Pin10=PB0
-Mcu.Pin11=PB10
-Mcu.Pin12=PB14
-Mcu.Pin13=PD8
-Mcu.Pin14=PD9
-Mcu.Pin15=PB6
-Mcu.Pin16=PB7
-Mcu.Pin17=PB9
-Mcu.Pin18=VP_SYS_VS_Systick
-Mcu.Pin19=VP_MEMORYMAP_VS_MEMORYMAP
+Mcu.Pin10=PA5
+Mcu.Pin11=PA6
+Mcu.Pin12=PA7
+Mcu.Pin13=PB0
+Mcu.Pin14=PB10
+Mcu.Pin15=PB14
+Mcu.Pin16=PD8
+Mcu.Pin17=PD9
+Mcu.Pin18=PB7
+Mcu.Pin19=PB8
 Mcu.Pin2=PC14-OSC32_IN (OSC32_IN)
-Mcu.Pin20=VP_NUCLEO-H753ZI_VS_BSP_COMMON
+Mcu.Pin20=PB9
+Mcu.Pin21=VP_SYS_VS_Systick
+Mcu.Pin22=VP_MEMORYMAP_VS_MEMORYMAP
+Mcu.Pin23=VP_NUCLEO-H753ZI_VS_BSP_COMMON
 Mcu.Pin3=PC15-OSC32_OUT (OSC32_OUT)
 Mcu.Pin4=PF6
 Mcu.Pin5=PF8
@@ -49,7 +54,7 @@ Mcu.Pin6=PF9
 Mcu.Pin7=PF10
 Mcu.Pin8=PH0-OSC_IN (PH0)
 Mcu.Pin9=PH1-OSC_OUT (PH1)
-Mcu.PinsNb=21
+Mcu.PinsNb=24
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
 Mcu.UserName=STM32H753ZITx
@@ -73,13 +78,20 @@ NVIC.PriorityGroup=NVIC_PRIORITYGROUP_4
 NVIC.SVCall_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
 NVIC.SysTick_IRQn=true\:0\:0\:false\:false\:true\:false\:true\:false
 NVIC.UsageFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
+PA5.Mode=Full_Duplex_Master
+PA5.Signal=SPI1_SCK
+PA6.Mode=Full_Duplex_Master
+PA6.Signal=SPI1_MISO
+PA7.Mode=Full_Duplex_Master
+PA7.Signal=SPI1_MOSI
 PB0.Locked=true
 PB10.Mode=Single Bank 1
 PB10.Signal=QUADSPI_BK1_NCS
 PB14.Locked=true
-PB6.Mode=I2C
-PB6.Signal=I2C1_SCL
 PB7.Locked=true
+PB8.Locked=true
+PB8.Mode=I2C
+PB8.Signal=I2C1_SCL
 PB9.Mode=I2C
 PB9.Signal=I2C1_SDA
 PC13.Locked=true
@@ -125,7 +137,7 @@ ProjectManager.HalAssertFull=false
 ProjectManager.HeapSize=0x200
 ProjectManager.KeepUserCode=true
 ProjectManager.LastFirmware=true
-ProjectManager.LibraryCopy=0
+ProjectManager.LibraryCopy=1
 ProjectManager.MainLocation=Core/Src
 ProjectManager.NoMain=false
 ProjectManager.PreviousToolchain=
@@ -140,87 +152,89 @@ ProjectManager.ToolChainLocation=
 ProjectManager.UAScriptAfterPath=
 ProjectManager.UAScriptBeforePath=
 ProjectManager.UnderRoot=false
-ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-HAL-false,2-MX_GPIO_Init-GPIO-false-HAL-true,3-MX_QUADSPI_Init-QUADSPI-false-HAL-true,false-0--NUCLEO-H753ZI-true-HAL-true,0-MX_CORTEX_M7_Init-CORTEX_M7-false-HAL-true
+ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-HAL-false,2-MX_GPIO_Init-GPIO-false-HAL-true,3-MX_QUADSPI_Init-QUADSPI-false-HAL-true,4-MX_I2C1_Init-I2C1-false-HAL-true,5-MX_SPI1_Init-SPI1-false-HAL-true,0-MX_CORTEX_M7_Init-CORTEX_M7-false-HAL-true,false-0--NUCLEO-H753ZI-true-HAL-true
 RCC.ADCFreq_Value=129000000
-RCC.AHB12Freq_Value=240000000
-RCC.AHB4Freq_Value=240000000
-RCC.APB1Freq_Value=120000000
-RCC.APB2Freq_Value=120000000
-RCC.APB3Freq_Value=120000000
-RCC.APB4Freq_Value=120000000
-RCC.AXIClockFreq_Value=240000000
+RCC.AHB12Freq_Value=75000000
+RCC.AHB4Freq_Value=75000000
+RCC.APB1Freq_Value=75000000
+RCC.APB2Freq_Value=75000000
+RCC.APB3Freq_Value=75000000
+RCC.APB4Freq_Value=75000000
+RCC.AXIClockFreq_Value=75000000
 RCC.CECFreq_Value=32000
 RCC.CKPERFreq_Value=64000000
-RCC.CortexFreq_Value=480000000
-RCC.CpuClockFreq_Value=480000000
-RCC.D1CPREFreq_Value=480000000
-RCC.D1PPRE=RCC_APB3_DIV2
-RCC.D2PPRE1=RCC_APB1_DIV2
-RCC.D2PPRE2=RCC_APB2_DIV2
-RCC.D3PPRE=RCC_APB4_DIV2
-RCC.DFSDMACLkFreq_Value=240000000
-RCC.DFSDMFreq_Value=120000000
+RCC.CortexFreq_Value=75000000
+RCC.CpuClockFreq_Value=75000000
+RCC.D1CPREFreq_Value=75000000
+RCC.DFSDMACLkFreq_Value=150000000
+RCC.DFSDMFreq_Value=75000000
 RCC.DIVM1=4
-RCC.DIVN1=60
-RCC.DIVP1Freq_Value=480000000
+RCC.DIVN1=9
+RCC.DIVP1Freq_Value=75000000
 RCC.DIVP2Freq_Value=129000000
 RCC.DIVP3Freq_Value=129000000
-RCC.DIVQ1=4
-RCC.DIVQ1Freq_Value=240000000
+RCC.DIVQ1=1
+RCC.DIVQ1Freq_Value=150000000
 RCC.DIVQ2Freq_Value=129000000
 RCC.DIVQ3Freq_Value=129000000
-RCC.DIVR1Freq_Value=480000000
+RCC.DIVR1Freq_Value=75000000
 RCC.DIVR2Freq_Value=129000000
 RCC.DIVR3Freq_Value=129000000
-RCC.FDCANFreq_Value=240000000
-RCC.FMCFreq_Value=240000000
+RCC.FDCANFreq_Value=150000000
+RCC.FMCFreq_Value=75000000
 RCC.FamilyName=M
-RCC.HCLK3ClockFreq_Value=240000000
-RCC.HCLKFreq_Value=240000000
-RCC.HPRE=RCC_HCLK_DIV2
-RCC.HRTIMFreq_Value=240000000
+RCC.HCLK3ClockFreq_Value=75000000
+RCC.HCLKFreq_Value=75000000
+RCC.HRTIMFreq_Value=75000000
 RCC.HSE_VALUE=8000000
-RCC.I2C123Freq_Value=120000000
-RCC.I2C4Freq_Value=120000000
-RCC.IPParameters=ADCFreq_Value,AHB12Freq_Value,AHB4Freq_Value,APB1Freq_Value,APB2Freq_Value,APB3Freq_Value,APB4Freq_Value,AXIClockFreq_Value,CECFreq_Value,CKPERFreq_Value,CortexFreq_Value,CpuClockFreq_Value,D1CPREFreq_Value,D1PPRE,D2PPRE1,D2PPRE2,D3PPRE,DFSDMACLkFreq_Value,DFSDMFreq_Value,DIVM1,DIVN1,DIVP1Freq_Value,DIVP2Freq_Value,DIVP3Freq_Value,DIVQ1,DIVQ1Freq_Value,DIVQ2Freq_Value,DIVQ3Freq_Value,DIVR1Freq_Value,DIVR2Freq_Value,DIVR3Freq_Value,FDCANFreq_Value,FMCFreq_Value,FamilyName,HCLK3ClockFreq_Value,HCLKFreq_Value,HPRE,HRTIMFreq_Value,HSE_VALUE,I2C123Freq_Value,I2C4Freq_Value,LPTIM1Freq_Value,LPTIM2Freq_Value,LPTIM345Freq_Value,LPUART1Freq_Value,LTDCFreq_Value,MCO1PinFreq_Value,MCO2PinFreq_Value,PLL2FRACN,PLL3FRACN,PLLFRACN,PWR_Regulator_Voltage_Scale,QSPIFreq_Value,RNGFreq_Value,RTCFreq_Value,SAI1Freq_Value,SAI23Freq_Value,SAI4AFreq_Value,SAI4BFreq_Value,SDMMCFreq_Value,SPDIFRXFreq_Value,SPI123Freq_Value,SPI45Freq_Value,SPI6Freq_Value,SWPMI1Freq_Value,SYSCLKFreq_VALUE,SYSCLKSource,Tim1OutputFreq_Value,Tim2OutputFreq_Value,TraceFreq_Value,USART16Freq_Value,USART234578Freq_Value,USBFreq_Value,VCO1OutputFreq_Value,VCO2OutputFreq_Value,VCO3OutputFreq_Value,VCOInput1Freq_Value,VCOInput2Freq_Value,VCOInput3Freq_Value
-RCC.LPTIM1Freq_Value=120000000
-RCC.LPTIM2Freq_Value=120000000
-RCC.LPTIM345Freq_Value=120000000
-RCC.LPUART1Freq_Value=120000000
+RCC.I2C123Freq_Value=75000000
+RCC.I2C4Freq_Value=75000000
+RCC.IPParameters=ADCFreq_Value,AHB12Freq_Value,AHB4Freq_Value,APB1Freq_Value,APB2Freq_Value,APB3Freq_Value,APB4Freq_Value,AXIClockFreq_Value,CECFreq_Value,CKPERFreq_Value,CortexFreq_Value,CpuClockFreq_Value,D1CPREFreq_Value,DFSDMACLkFreq_Value,DFSDMFreq_Value,DIVM1,DIVN1,DIVP1Freq_Value,DIVP2Freq_Value,DIVP3Freq_Value,DIVQ1,DIVQ1Freq_Value,DIVQ2Freq_Value,DIVQ3Freq_Value,DIVR1Freq_Value,DIVR2Freq_Value,DIVR3Freq_Value,FDCANFreq_Value,FMCFreq_Value,FamilyName,HCLK3ClockFreq_Value,HCLKFreq_Value,HRTIMFreq_Value,HSE_VALUE,I2C123Freq_Value,I2C4Freq_Value,LPTIM1Freq_Value,LPTIM2Freq_Value,LPTIM345Freq_Value,LPUART1Freq_Value,LTDCFreq_Value,MCO1PinFreq_Value,MCO2PinFreq_Value,PLL2FRACN,PLL3FRACN,PLLFRACN,PWR_Regulator_Voltage_Scale,QSPIFreq_Value,RNGFreq_Value,RTCFreq_Value,SAI1Freq_Value,SAI23Freq_Value,SAI4AFreq_Value,SAI4BFreq_Value,SDMMCFreq_Value,SPDIFRXFreq_Value,SPI123Freq_Value,SPI45Freq_Value,SPI6Freq_Value,SWPMI1Freq_Value,SYSCLKFreq_VALUE,SYSCLKSource,Tim1OutputFreq_Value,Tim2OutputFreq_Value,TraceFreq_Value,USART16Freq_Value,USART234578Freq_Value,USBFreq_Value,VCO1OutputFreq_Value,VCO2OutputFreq_Value,VCO3OutputFreq_Value,VCOInput1Freq_Value,VCOInput2Freq_Value,VCOInput3Freq_Value
+RCC.LPTIM1Freq_Value=75000000
+RCC.LPTIM2Freq_Value=75000000
+RCC.LPTIM345Freq_Value=75000000
+RCC.LPUART1Freq_Value=75000000
 RCC.LTDCFreq_Value=129000000
 RCC.MCO1PinFreq_Value=64000000
-RCC.MCO2PinFreq_Value=480000000
+RCC.MCO2PinFreq_Value=75000000
 RCC.PLL2FRACN=0
 RCC.PLL3FRACN=0
-RCC.PLLFRACN=0
+RCC.PLLFRACN=3072
 RCC.PWR_Regulator_Voltage_Scale=PWR_REGULATOR_VOLTAGE_SCALE0
-RCC.QSPIFreq_Value=240000000
+RCC.QSPIFreq_Value=75000000
 RCC.RNGFreq_Value=48000000
 RCC.RTCFreq_Value=32000
-RCC.SAI1Freq_Value=240000000
-RCC.SAI23Freq_Value=240000000
-RCC.SAI4AFreq_Value=240000000
-RCC.SAI4BFreq_Value=240000000
-RCC.SDMMCFreq_Value=240000000
-RCC.SPDIFRXFreq_Value=240000000
-RCC.SPI123Freq_Value=240000000
-RCC.SPI45Freq_Value=120000000
-RCC.SPI6Freq_Value=120000000
-RCC.SWPMI1Freq_Value=120000000
-RCC.SYSCLKFreq_VALUE=480000000
+RCC.SAI1Freq_Value=150000000
+RCC.SAI23Freq_Value=150000000
+RCC.SAI4AFreq_Value=150000000
+RCC.SAI4BFreq_Value=150000000
+RCC.SDMMCFreq_Value=150000000
+RCC.SPDIFRXFreq_Value=150000000
+RCC.SPI123Freq_Value=150000000
+RCC.SPI45Freq_Value=75000000
+RCC.SPI6Freq_Value=75000000
+RCC.SWPMI1Freq_Value=75000000
+RCC.SYSCLKFreq_VALUE=75000000
 RCC.SYSCLKSource=RCC_SYSCLKSOURCE_PLLCLK
-RCC.Tim1OutputFreq_Value=240000000
-RCC.Tim2OutputFreq_Value=240000000
+RCC.Tim1OutputFreq_Value=75000000
+RCC.Tim2OutputFreq_Value=75000000
 RCC.TraceFreq_Value=64000000
-RCC.USART16Freq_Value=120000000
-RCC.USART234578Freq_Value=120000000
-RCC.USBFreq_Value=240000000
-RCC.VCO1OutputFreq_Value=960000000
+RCC.USART16Freq_Value=75000000
+RCC.USART234578Freq_Value=75000000
+RCC.USBFreq_Value=150000000
+RCC.VCO1OutputFreq_Value=150000000
 RCC.VCO2OutputFreq_Value=258000000
 RCC.VCO3OutputFreq_Value=258000000
 RCC.VCOInput1Freq_Value=16000000
 RCC.VCOInput2Freq_Value=2000000
 RCC.VCOInput3Freq_Value=2000000
+SPI1.BaudRatePrescaler=SPI_BAUDRATEPRESCALER_8
+SPI1.CalculateBaudRate=18.75 MBits/s
+SPI1.DataSize=SPI_DATASIZE_8BIT
+SPI1.Direction=SPI_DIRECTION_2LINES
+SPI1.IPParameters=VirtualType,Mode,Direction,CalculateBaudRate,BaudRatePrescaler,DataSize
+SPI1.Mode=SPI_MODE_MASTER
+SPI1.VirtualType=VM_MASTER
 VP_MEMORYMAP_VS_MEMORYMAP.Mode=CurAppReg
 VP_MEMORYMAP_VS_MEMORYMAP.Signal=MEMORYMAP_VS_MEMORYMAP
 VP_NUCLEO-H753ZI_VS_BSP_COMMON.Mode=COMMON
