--- a/chip-tester.ioc
+++ b/chip-tester.ioc
@@ -34,19 +34,20 @@ Mcu.Pin0=PE2
 Mcu.Pin1=PC13
 Mcu.Pin10=PA5
 Mcu.Pin11=PA6
-Mcu.Pin12=PA7
-Mcu.Pin13=PB0
-Mcu.Pin14=PB10
-Mcu.Pin15=PB14
-Mcu.Pin16=PD8
-Mcu.Pin17=PD9
-Mcu.Pin18=PB7
-Mcu.Pin19=PB8
+Mcu.Pin12=PB0
+Mcu.Pin13=PB10
+Mcu.Pin14=PB14
+Mcu.Pin15=PD8
+Mcu.Pin16=PD9
+Mcu.Pin17=PD14
+Mcu.Pin18=PB5
+Mcu.Pin19=PB7
 Mcu.Pin2=PC14-OSC32_IN (OSC32_IN)
-Mcu.Pin20=PB9
-Mcu.Pin21=VP_SYS_VS_Systick
-Mcu.Pin22=VP_MEMORYMAP_VS_MEMORYMAP
-Mcu.Pin23=VP_NUCLEO-H753ZI_VS_BSP_COMMON
+Mcu.Pin20=PB8
+Mcu.Pin21=PB9
+Mcu.Pin22=VP_SYS_VS_Systick
+Mcu.Pin23=VP_MEMORYMAP_VS_MEMORYMAP
+Mcu.Pin24=VP_NUCLEO-H753ZI_VS_BSP_COMMON
 Mcu.Pin3=PC15-OSC32_OUT (OSC32_OUT)
 Mcu.Pin4=PF6
 Mcu.Pin5=PF8
@@ -54,7 +55,7 @@ Mcu.Pin6=PF9
 Mcu.Pin7=PF10
 Mcu.Pin8=PH0-OSC_IN (PH0)
 Mcu.Pin9=PH1-OSC_OUT (PH1)
-Mcu.PinsNb=24
+Mcu.PinsNb=25
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
 Mcu.UserName=STM32H753ZITx
@@ -82,12 +83,13 @@ PA5.Mode=Full_Duplex_Master
 PA5.Signal=SPI1_SCK
 PA6.Mode=Full_Duplex_Master
 PA6.Signal=SPI1_MISO
-PA7.Mode=Full_Duplex_Master
-PA7.Signal=SPI1_MOSI
 PB0.Locked=true
 PB10.Mode=Single Bank 1
 PB10.Signal=QUADSPI_BK1_NCS
 PB14.Locked=true
+PB5.Locked=true
+PB5.Mode=Full_Duplex_Master
+PB5.Signal=SPI1_MOSI
 PB7.Locked=true
 PB8.Locked=true
 PB8.Mode=I2C
@@ -99,6 +101,10 @@ PC14-OSC32_IN\ (OSC32_IN).Locked=true
 PC14-OSC32_IN\ (OSC32_IN).Signal=RCC_OSC32_IN
 PC15-OSC32_OUT\ (OSC32_OUT).Locked=true
 PC15-OSC32_OUT\ (OSC32_OUT).Signal=RCC_OSC32_OUT
+PD14.GPIOParameters=GPIO_Label
+PD14.GPIO_Label=SPI_CS
+PD14.Locked=true
+PD14.Signal=GPIO_Output
 PD8.Locked=true
 PD8.Signal=USART3_TX
 PD9.Locked=true
@@ -228,12 +234,13 @@ RCC.VCO3OutputFreq_Value=258000000
 RCC.VCOInput1Freq_Value=16000000
 RCC.VCOInput2Freq_Value=2000000
 RCC.VCOInput3Freq_Value=2000000
-SPI1.BaudRatePrescaler=SPI_BAUDRATEPRESCALER_8
-SPI1.CalculateBaudRate=18.75 MBits/s
+SPI1.BaudRatePrescaler=SPI_BAUDRATEPRESCALER_64
+SPI1.CalculateBaudRate=2.34375 MBits/s
 SPI1.DataSize=SPI_DATASIZE_8BIT
 SPI1.Direction=SPI_DIRECTION_2LINES
-SPI1.IPParameters=VirtualType,Mode,Direction,CalculateBaudRate,BaudRatePrescaler,DataSize
+SPI1.IPParameters=VirtualType,Mode,Direction,CalculateBaudRate,BaudRatePrescaler,DataSize,NSSPMode
 SPI1.Mode=SPI_MODE_MASTER
+SPI1.NSSPMode=SPI_NSS_PULSE_DISABLE
 SPI1.VirtualType=VM_MASTER
 VP_MEMORYMAP_VS_MEMORYMAP.Mode=CurAppReg
 VP_MEMORYMAP_VS_MEMORYMAP.Signal=MEMORYMAP_VS_MEMORYMAP
